--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # 每日早9点到晚8点每2小时运行一次
 
-name: 中青自动阅读
+name: 中青自动阅读2
 
 on:
   workflow_dispatch:
