--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -6,7 +6,7 @@ name: 中青看点2
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/10 * * * *'
+     - cron: '0 0 1 1 *'
   watch:
     types: started
 
