--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,10 +1,10 @@
-name: 机场&书旗&羊毛赚
+name: 书旗&羊毛赚
 on:
   workflow_dispatch:
   watch:
     types: started
   schedule:
-    - cron: '0 21 * * *'
+    - cron: '20 0 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest       
@@ -12,30 +12,26 @@ jobs:
       
       - name: Checkout
         run: |
-          git clone https://github.com/xiaokxiansheng/js.git ~/js
+          git clone https://github.com/a1564471347/ZQ.git ~/ZQ
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
       - name: npm install
         run: |
-          cd ~/js
+          cd ~/ZQ
           npm install
           npm install cron
           npm install request
           curl ipinfo.io/json
       
-      - name: '【机场签到】'
-        run: |
-          cd ~/js   
-          node Task/checkin.js
       - name: '【书旗小说】'
         run: |
-          cd ~/js   
+          cd ~/ZQ    
           node Task/sqxs.js
       - name: '【羊毛赚】'
         run: |
-          cd ~/js   
+          cd ~/ZQ   
           node Task/ymz.js
  
 
