--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,4 +1,4 @@
-name: 书旗&羊毛赚
+name: 羊毛赚
 on:
   workflow_dispatch:
   watch:
@@ -25,10 +25,6 @@ jobs:
           npm install request
           curl ipinfo.io/json
       
-      - name: '【书旗小说】'
-        run: |
-          cd ~/ZQ    
-          node Task/sqxs.js
       - name: '【羊毛赚】'
         run: |
           cd ~/ZQ   
