--- a/.github/workflows/flw.yml
+++ b/.github/workflows/flw.yml
@@ -6,7 +6,7 @@ name: 返利网
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0 7-11 * * *'
+     - cron: '0 0,3,6,9,12 * * *'
   watch:
     types: started
 jobs:
