--- a/.github/workflows/ym.yml
+++ b/.github/workflows/ym.yml
@@ -4,7 +4,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: '0 *6/ * * *'
+    - cron: '0 */6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest       
