--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -6,7 +6,7 @@ name: 中青自动阅读
 on:
   workflow_dispatch:
   schedule:
-     - cron: '2-50/20 6-23/5 * * *'
+     - cron: '0 0 1 1 *'
   watch:
     types: started
 jobs:
