--- a/.github/workflows/xyzd.yml
+++ b/.github/workflows/xyzd.yml
@@ -4,7 +4,7 @@ name: xyzd
 on:
   workflow_dispatch:
   schedule:
-     - cron: '2 1-11 * * *'
+     - cron: '*/20 1-11 * * *'
   watch:
     types: started
 jobs:
