--- a/.github/workflows/wkzz.yml
+++ b/.github/workflows/wkzz.yml
@@ -4,7 +4,7 @@ name: wkzz
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/15 8-23 * * *'
+     - cron: '*/25 * * * *'
   watch:
     types: started
 jobs:
