--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -4,7 +4,7 @@ name: hldsp
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/20 1-13 * * *'
+     - cron: '23 3 * * *'
   watch:
     types: started
 jobs:
@@ -29,7 +29,7 @@ jobs:
       - name: '运行 【hldsp】'
         if: env.HLDSP_HD
         run: |
-          node Task/hldsp.js
+          node task/hldsp.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
