--- a/.github/workflows/vsh.yml
+++ b/.github/workflows/vsh.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/a1564471347
+          git clone https://github.com/a1564471347/ZQ
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
@@ -31,13 +31,13 @@ jobs:
       - name: npm install
         if: env.VSH_HD
         run: |
-          cd ~/a1564471347
+          cd ~/ZQ
           git checkout JavaScript
           npm install
       - name: '运行 【V生活任务】'
         if: env.VSH_HD
         run: |
-          cd ~/a1564471347
+          cd ~/ZQ
           node Task/vsh.js
         env:
           
