--- a/.github/workflows/vsh.yml
+++ b/.github/workflows/vsh.yml
@@ -32,8 +32,8 @@ jobs:
         if: env.VSH_HD
         run: |
           cd ~/ZQ
-         
-          npm install
+        git checkout ZQ
+        npm install
       - name: '运行 【V生活任务】'
         if: env.VSH_HD
         run: |
