--- a/.github/workflows/ysm.yml
+++ b/.github/workflows/ysm.yml
@@ -4,7 +4,7 @@ name: ysm
 on:
   workflow_dispatch:
   schedule:
-     - cron: '5 1-20 * * *'
+     - cron: '*/30 1-20 * * *'
   watch:
     types: started
 jobs:
