--- a/.github/workflows/ximei.yml
+++ b/.github/workflows/ximei.yml
@@ -3,7 +3,7 @@ name: ximei
 on:
   workflow_dispatch:
   schedule:
-     - cron: '20 1-10 * * *'
+     - cron: '*/30 1-10 * * *'
   watch:
     types: ximei
 jobs:
