--- a/.github/workflows/lgyy.yml
+++ b/.github/workflows/lgyy.yml
@@ -4,7 +4,7 @@ name: 朗果英语
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+     - cron: '0 */1 * * *'
   watch:
     types: started
 jobs:
