--- a/.github/workflows/DiDi_drink.yml
+++ b/.github/workflows/DiDi_drink.yml
@@ -1,4 +1,4 @@
-name: 滴滴出行
+name: 滴滴喝水
 
 on:
   workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm install got #tough-cookie
-      - name: ' 运行 【滴滴出行】'
+      - name: ' 运行 【滴滴喝水】'
         run: |
           node Task/DiDi_drink.js
         env:
